lgoin from create done

--- a/index.html
+++ b/index.html
@@ -8,11 +8,37 @@
     <title>Login Form Desgin Using Html css</title>
   </head>
   <body>
-    <h1>this is login form</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, sunt!
-      Error, maxime beatae quod laudantium perferendis excepturi aliquam
-      deleniti a repellendus distinctio laborum qui accusamus.
-    </p>
+    <div class="login-section">
+      <div class="form">
+        <div class="l-Title">
+          <h1>Login</h1>
+        </div>
+        <form action="">
+          <div class="input-group">
+            <label for="Email">Enter your email</label>
+            <input
+              type="email"
+              name="email"
+              class="inputField"
+              placeholder="Enter your email"
+              autocomplete="off"
+            />
+          </div>
+          <div class="input-group">
+            <label for="Email">Enter your password</label>
+            <input
+              type="password"
+              name="password"
+              class="inputField"
+              placeholder="Enter your email"
+              autocomplete="off"
+            />
+          </div>
+          <div class="btn-section">
+            <button type="submit" class="loginBtn">Login</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
